# echo

./: .gitignore  LICENSE  README.md  SPEC.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: tauri-release.yml
homepage/: MISSING_RESOURCES.md  homepage-instructions.md  index.html
scripts/: install-linux-desktop-entry.sh
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/linux/: echo.desktop  puretype.desktop
src-tauri/src/: lib.rs  main.rs
