[package]
name = "puretype"
version = "0.1.0"
description = "A high-performance Markdown note-taking app inspired by nvALT."
authors = ["puretype"]
edition = "2021"

[lib]
name = "puretype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
image = "0.25.10"
notify = "8"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sublime_fuzzy = "0.7"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
walkdir = "2"
